--- a/app/views/ordens/_show4.html.erb
+++ b/app/views/ordens/_show4.html.erb
@@ -338,13 +338,17 @@
     </td>
     
     <% end %>
+   
+
+   <% if last_day == 29 %> 
     <tr>
-      <td colspan="38" class="bordered_bottom bordered_right">
+      <td colspan="39" class="bordered_bottom bordered_right">
         &nbsp;
       </td>
     </tr>
+
     <tr>
-      <td colspan="37" class="bordered_bottom bordered_right bold">
+      <td colspan="39" class="bordered_bottom bordered_right bold">
         Subtotal:
       </td>
       <td class="bordered_bottom bordered_right bold right">
@@ -352,7 +356,7 @@
       </td>
     </tr>
     <tr>
-      <td colspan="37" class="bordered_bottom bordered_right bold">
+      <td colspan="39" class="bordered_bottom bordered_right bold">
         IGV:
       </td>
       <td class="bordered_bottom bordered_right bold right">
@@ -360,12 +364,83 @@
       </td>
     </tr>
     <tr>
-      <td colspan="37" class="bordered_bottom bordered_right bold">
+      <td colspan="39" class="bordered_bottom bordered_right bold">
         Total:
       </td>
       <td class="bordered_bottom bordered_right bold right">
         <%= money(@orden.total) %>
       </td>
     </tr>
+<% end %>
+
+
+   <% if last_day == 30 %> 
+    <tr>
+      <td colspan="40" class="bordered_bottom bordered_right">
+        &nbsp;
+      </td>
+    </tr>
+
+    <tr>
+      <td colspan="40" class="bordered_bottom bordered_right bold">
+        Subtotal:
+      </td>
+      <td class="bordered_bottom bordered_right bold right">
+        <%= money(@orden.subtotal) %>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="40" class="bordered_bottom bordered_right bold">
+        IGV:
+      </td>
+      <td class="bordered_bottom bordered_right bold right">
+        <%= money(@orden.tax) %>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="40" class="bordered_bottom bordered_right bold">
+        Total:
+      </td>
+      <td class="bordered_bottom bordered_right bold right">
+        <%= money(@orden.total) %>
+      </td>
+    </tr>
+<% end %>
+
+
+
+   <% if last_day == 31 %> 
+    <tr>
+      <td colspan="41" class="bordered_bottom bordered_right">
+        &nbsp;
+      </td>
+    </tr>
+
+    <tr>
+      <td colspan="41" class="bordered_bottom bordered_right bold">
+        Subtotal:
+      </td>
+      <td class="bordered_bottom bordered_right bold right">
+        <%= money(@orden.subtotal) %>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="41" class="bordered_bottom bordered_right bold">
+        IGV:
+      </td>
+      <td class="bordered_bottom bordered_right bold right">
+        <%= money(@orden.tax) %>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="41" class="bordered_bottom bordered_right bold">
+        Total:
+      </td>
+      <td class="bordered_bottom bordered_right bold right">
+        <%= money(@orden.total) %>
+      </td>
+    </tr>
+
+    <% end %>
   </tbody>
 </table>
