--- a/app/views/companies/configuracion.html.erb
+++ b/app/views/companies/configuracion.html.erb
@@ -273,6 +273,19 @@
   </p> 
 
 
+<%= hr() %>
+
+
+  <h3>
+        <div>
+          <%= image_tag("clients_32.png", :class => "vmiddle") %>
+          <%= link_to "Orden Comision",orden_comisions_path %> 
+        </div>
+  </h3>
+  <p>
+     Agregar, editar or agregar tipo formatos
+     
+  </p> 
 
 
 </div>
