--- a/app/views/ordens/_show7.html.erb
+++ b/app/views/ordens/_show7.html.erb
@@ -324,13 +324,16 @@
     </td>
     
     <% end %>
+  
+   <% if last_day = 28 %> 
     <tr>
-      <td colspan="38" class="bordered_bottom bordered_right">
+      <td colspan="40" class="bordered_bottom bordered_right">
         &nbsp;
       </td>
     </tr>
+
     <tr>
-      <td colspan="38" class="bordered_bottom bordered_right bold">
+      <td colspan="40" class="bordered_bottom bordered_right bold">
         Subtotal:
       </td>
       <td class="bordered_bottom bordered_right bold right">
@@ -338,7 +341,7 @@
       </td>
     </tr>
     <tr>
-      <td colspan="38" class="bordered_bottom bordered_right bold">
+      <td colspan="40" class="bordered_bottom bordered_right bold">
         IGV:
       </td>
       <td class="bordered_bottom bordered_right bold right">
@@ -346,12 +349,120 @@
       </td>
     </tr>
     <tr>
-      <td colspan="38" class="bordered_bottom bordered_right bold">
+      <td colspan="40" class="bordered_bottom bordered_right bold">
         Total:
       </td>
       <td class="bordered_bottom bordered_right bold right">
         <%= money(@orden.total) %>
       </td>
     </tr>
+<% end %>
+
+
+
+
+   <% if last_day == 29 %> 
+    <tr>
+      <td colspan="41" class="bordered_bottom bordered_right">
+        &nbsp;
+      </td>
+    </tr>
+
+    <tr>
+      <td colspan="41" class="bordered_bottom bordered_right bold">
+        Subtotal:
+      </td>
+      <td class="bordered_bottom bordered_right bold right">
+        <%= money(@orden.subtotal) %>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="41" class="bordered_bottom bordered_right bold">
+        IGV:
+      </td>
+      <td class="bordered_bottom bordered_right bold right">
+        <%= money(@orden.tax) %>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="41" class="bordered_bottom bordered_right bold">
+        Total:
+      </td>
+      <td class="bordered_bottom bordered_right bold right">
+        <%= money(@orden.total) %>
+      </td>
+    </tr>
+<% end %>
+
+
+   <% if last_day == 30 %> 
+    <tr>
+      <td colspan="42" class="bordered_bottom bordered_right">
+        &nbsp;
+      </td>
+    </tr>
+
+    <tr>
+      <td colspan="42" class="bordered_bottom bordered_right bold">
+        Subtotal:
+      </td>
+      <td class="bordered_bottom bordered_right bold right">
+        <%= money(@orden.subtotal) %>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="42" class="bordered_bottom bordered_right bold">
+        IGV:
+      </td>
+      <td class="bordered_bottom bordered_right bold right">
+        <%= money(@orden.tax) %>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="42" class="bordered_bottom bordered_right bold">
+        Total:
+      </td>
+      <td class="bordered_bottom bordered_right bold right">
+        <%= money(@orden.total) %>
+      </td>
+    </tr>
+<% end %>
+
+
+
+   <% if last_day == 31 %> 
+    <tr>
+      <td colspan="43" class="bordered_bottom bordered_right">
+        &nbsp;
+      </td>
+    </tr>
+
+    <tr>
+      <td colspan="43" class="bordered_bottom bordered_right bold">
+        Subtotal:
+      </td>
+      <td class="bordered_bottom bordered_right bold right">
+        <%= money(@orden.subtotal) %>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="43" class="bordered_bottom bordered_right bold">
+        IGV:
+      </td>
+      <td class="bordered_bottom bordered_right bold right">
+        <%= money(@orden.tax) %>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="43" class="bordered_bottom bordered_right bold">
+        Total:
+      </td>
+      <td class="bordered_bottom bordered_right bold right">
+        <%= money(@orden.total) %>
+      </td>
+    </tr>
+<% end %>
+
+
   </tbody>
 </table>
