--- a/app/views/facturas/newfactura2.html.erb
+++ b/app/views/facturas/newfactura2.html.erb
@@ -70,6 +70,10 @@
           Medio 
         </th>
         <th class="small bordered_bottom bordered_right">
+          Cliente 
+        </th>
+        
+        <th class="small bordered_bottom bordered_right">
           Subtotal 
         </th>        
         <th class="small bordered_bottom bordered_right">
@@ -77,7 +81,15 @@
         </th>
         <th class="small bordered_bottom bordered_right">
           Total
-        </th>        
+        </th>   
+        <th class="small bordered_bottom bordered_right">
+          Comision 1
+        </th>   
+        <th class="small bordered_bottom bordered_right">
+          Comision 2 
+        </th>   
+
+
         <th class="small bordered_bottom bordered_right">
           Selección
         </th>
@@ -85,6 +97,7 @@
     </thead>
     <tbody>
       
+
    
       <%=  form_tag discontinue_facturas_path(factura_id: @factura.id),method: :post do  %>
    
@@ -97,9 +110,14 @@
             <%= (item.code) %>
           </td>
        
-          <td class="small bordered_bottom bordered_right" style="width: 50px;">
+          <td class="small bordered_bottom bordered_right" style="width: 150px;">
             <%= item.medio.descrip %>
           </td>
+      <td class="small bordered_bottom bordered_right" style="width: 2  50px;">
+            <%= item.customer.name %>
+          </td>
+
+
              <td class="small bordered_bottom bordered_right" style="width: 100px;">
             <%= money(item.subtotal) %>
           </td>
@@ -111,6 +129,18 @@
             <%= money(item.total) %>
 
           </td>
+
+           <td class="small bordered_bottom bordered_right" style="width: 100px;">
+            <%= item.get_comision1(item.customer_id,item.medio_id)  %>
+
+          </td>
+         <td class="small bordered_bottom bordered_right" style="width: 100px;">
+            <%= item.get_comision2(item.customer_id,item.medio_id) %>
+
+          </td>
+
+
+          
           
            <td class="bordered_right bordered_bottom right">
             <%= check_box_tag "products_ids[]", item.id     %>
