--- a/app/views/facturas/newfactura2.html.erb
+++ b/app/views/facturas/newfactura2.html.erb
@@ -111,14 +111,18 @@
           </td>
        
           <td class="small bordered_bottom bordered_right" style="width: 150px;">
+
+            <% if !item.medio.nil? %>
             <%= item.medio.descrip %>
+
+            <% end %>
           </td>
-      <td class="small bordered_bottom bordered_right" style="width: 2  50px;">
+          <td class="small bordered_bottom bordered_right" style="width: 2  50px;">
             <%= item.customer.name %>
           </td>
 
 
-             <td class="small bordered_bottom bordered_right" style="width: 100px;">
+          <td class="small bordered_bottom bordered_right" style="width: 100px;">
             <%= money(item.subtotal) %>
           </td>
          
@@ -130,14 +134,6 @@
 
           </td>
 
-           <td class="small bordered_bottom bordered_right" style="width: 100px;">
-            <%= item.get_comision1(item.customer_id,item.medio_id)  %>
-
-          </td>
-         <td class="small bordered_bottom bordered_right" style="width: 100px;">
-            <%= item.get_comision2(item.customer_id,item.medio_id) %>
-
-          </td>
 
 
           
