--- a/app/views/reports/rpt_cadmin2.html.erb
+++ b/app/views/reports/rpt_cadmin2.html.erb
@@ -48,7 +48,7 @@ totals = []
          <td>
       <div class="field">
         <h5>  Medios </h5>
-        <%= select_tag(:medio_id,options_from_collection_for_select(@medios,'id','name'),:id => "medio_select"  ) %>
+        <%= select_tag(:medio_id,options_from_collection_for_select(@medios,'id','descrip'),:id => "medio_select"  ) %>
       </div>
       </td>
       
