--- a/app/views/supplier_payments/_form3.html.erb
+++ b/app/views/supplier_payments/_form3.html.erb
@@ -45,7 +45,7 @@
 
     <%= hr() %>
 
-     <%= f.select :tipo_factura, options_for_select([["MEDIO-CLIENTE",1]]) %>
+     <%= f.select :tipo_factura, options_for_select([["CLIENTE-MEDIO",2]]) %>
 
 <div class="field">
       <%= "Serie:  " %><br />
