--- a/app/views/facturas/_form3.html.erb
+++ b/app/views/facturas/_form3.html.erb
@@ -45,7 +45,7 @@
 
     <%= hr() %>
 
-     <%= f.select :tipo_factura, options_for_select([["MEDIO-CLIENTE",1]]) %>
+     <%= f.select :tipo_factura, options_for_select([["CLIENTE-MEDIO",2]]) %>
 
 <div class="field">
       <%= "Serie:  " %><br />
@@ -55,17 +55,13 @@
      </div>
 
       <br> Tipo de Facturacion <br />
-    <div class="field">
-      <%= f.label :medio_id, "Medio:" %><br />
-      <%= f.select :medio_id,options_from_collection_for_select(@medios,'id','descrip') %>
-    </div>
-
+    
 
      <div class="field">
       <%= f.label :customer_id, "Cliente:" %><br />
       <%= f.select :customer_id,options_from_collection_for_select(@customers,'id','name') %>
     </div>
-
+   <br> </br> 
 
      <div class="field">
       <%= f.label :payment_id,"Forma de Pago " %><br />
