--- a/app/views/facturas/list_invoices.html.erb
+++ b/app/views/facturas/list_invoices.html.erb
@@ -21,9 +21,11 @@
 </div>
 
 <div class="button">
-  <%= link_to 'CPE Servicios - Orden', "/facturas/new/#{@company.id}" %>  
+  <%= link_to 'CPE Servicios - Medio - Cliente', "/facturas/new/#{@company.id}" %>  
+  <%= link_to 'CPE Servicios - Cliente - Medios', "/facturas/new3/#{@company.id}" %>  
   
-  <%= link_to "CPE Servicios", "/facturas/new2/#{@company.id}" %>
+  
+  <%= link_to "CPE Servicios ", "/facturas/new2/#{@company.id}" %>
 </div>
 
 <br />
